--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "validatorjs",
   "description": "Validation library inspired by Laravel's Validator",
-  "version": "e1.0.2",
+  "version": "100.0.0",
   "author": "David <david@thejsguy.com>",
   "contributors": [
     {
